# opengl_playground

./: .clang-tidy  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/Source/: Main.cpp
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  Event.h  InputEvents.h  Window.cpp  Window.h  WindowEvents.h
src/: Application.cpp  Application.h  Error.h  Main.cpp  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
